Format the code according code style, correct and represent Book as record